# YALL

./: CMakeLists.txt  IDENTIFICATION.txt  README.org  README.txt  benchmark.scm  demo  presentation.url
app/: main.cpp  tests_eval.cpp  tests_read.cpp
include/ra/: eval.hpp  read.hpp  util.hpp
lib/: eval.cpp  read.cpp
